--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shoelace-style/shoelace": "^2.15.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -19,7 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.9",
     "styled-reset": "^4.5.2"
   },
